[package]
name = "comode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
colored = "2.1.0"
jwt = "0.16.0"
jwt-simple = "0.12.9"
keyring = "2.3.2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.114"
term_size = "0.3.2"
thiserror = "1.0.58"
