[package]
name = "comode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
colored = "2.1.0"
crossterm = "0.27.0"
http = "1.1.0"
iso8601 = "0.6.1"
jwt = "0.16.0"
jwt-simple = "0.12.9"
keyring = "2.3.2"
ratatui = "0.26.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.197"
serde_json = "1.0.114"
term_size = "0.3.2"
termimad = "0.29.1"
thiserror = "1.0.58"
tui-textarea = "0.4.0"
uri = "0.4.0"
uuid = "1.8.0"
